# pac1-py-domain-fit

./: .gitignore  README.MD  deterministic_ops.py  main.py  pyproject.toml  temporal_controls.py  thread_stdio.py
application/: __init__.py  context.py  temporal.py
application/contracts/: __init__.py  finance_lookup.py  inbox_requests.py  workflow_actions.py
application/executors/: __init__.py  finance_document_ingest.py  finance_payment.py  finance_read_step.py  invoice_channel_selection.py  invoice_email.py  invoice_record_selection.py  model.py  query_read_step.py  read_result.py  read_steps.py
application/mutations/: __init__.py  finance_bulk_delete.py  finance_create_record.py  finance_markdown.py  finance_update_bill.py  outbox_draft.py  result.py  (+2 more)
bitgn/: __init__.py  harness_connect.py  harness_pb2.py
domain/: __init__.py  record_references.py  workspace.py
formats/: __init__.py  finance_markdown.py  frontmatter.py  json_payloads.py  markdown_records.py  markdown_tables.py  yaml.py
loaders/: __init__.py  accounts.py  capture.py  cast.py  finance.py  messages.py  projects.py
runtime/: __init__.py
task_routing/: __init__.py  disclosure.py  extractor.py  finance_lookup.py  finance_lookup_fallback.py  finance_prompt_index.py  gateway.py  gateway_factory.py  inbox_classifier.py  llm_port.py  model.py  mutation_fallback.py  openai_gateway.py  outcome_classifier.py  prompt_registry.py  prompts.py  provider.py  reasoning.py  record_resolution.py  record_selector.py  resolvers.py  step_contract.py  step_registry.py
telemetry/: __init__.py  trace.py
(+178 files in other folders)
